Fixing Typewriter animation on Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -385,7 +385,14 @@ i {
     left: calc(100% + 4px);
     border-left: 1px solid #FFFFFF;
   }
+  74% {
+    border-left: 1px solid #FFFFFF;
+  }
   75% {
+    left: 0%;
+    border-left: 0px solid #FFFFFF;
+  }
+  100% {
     left: 0%;
     border-left: 0px solid #FFFFFF;
   }
